# bmb_rs_server

./: .gitignore  404.html  Cargo.toml  Dockerfile  ReadMe.md
archive/basics/: ReadMe.md
archive/basics/2-multi_threading/: ReadMe.md  single_threaded.rs
archive/basics/2-multi_threading/src/: lib.rs
archive/basics/3-cleanup/: ReadMe.md  index.html
archive/exercises/: ReadMd.md
archive/features/: ReadMd.md
archive/features/realtime_chat/: ReadMd.md
archive/features/realtime_chat/src/: main.rs
archive/surrealdb/: async.rs
archives/: ReadMe.md
archives/basics/1-html_rendering/: ReadMe.md
archives/basics/2-multi_threading/: ReadMe.md
archives/basics/3-cleanup/src/: lib.rs
archives/exercises/: BMI.rs
archives/features/realtime_chat/: ReadMd.md
archives/features/realtime_chat/static/: index.html
archives/features/realtime_chat/static/assets/: index-d4b0e0b0.js
archives/surrealdb/: ReadMe.md
src/: main.rs  render_html.rs
static/: index.html
static/assets/: index-4bd497d3.css
